--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <header class="header_main">
         <div id="menu_header">
             <ul>
-                <li>menu1</li>
-                <li>menu2</li>
-                <li>menu3</li>
-                <li>menu4</li>
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>
+                <li>Contact</li>
             </ul>
         </div>
         <div id="menu_bar">
@@ -40,18 +40,19 @@
         <div id="sidebar_options">
             <button id="btn"> Click me!</button>
             <ul id="myList">
-                <li>menu1</li>
-                <li>menu2</li>
-                <li>menu3</li>
-                <li>menu4</li>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li>Contact Us</li>
             </ul>
         </div>
 
     </section>
     <section class="main_main">
         <div id="info">
-            <h1>My API</h1>
-            <p>API is a set of rules and mechanisms by which one application or component interacts with the others. The API is a programmatic way for different pieces of software to communicate with each other. It is a set of rules that allows one piece of software application to talk to another. It is a software intermediary that allows two applications to talk to each other. In other words, an API is the messenger that delivers your request to the provider that you're requesting it from and then delivers the response back to you.</p>
+            <h1>Brewery Explorer</h1>
+            <br>
+            <p>Welcome to our Brewery Map Application! Explore the finest breweries across the United States with our interactive map. Discover where your favorite beers are crafted and learn more about the brewing process. Whether you're a beer enthusiast or a casual drinker, our platform offers a comprehensive guide to breweries near you.</p>
         </div>
 
         <div id="map1"></div>
@@ -62,8 +63,17 @@
 
 
     </section>
-    <section class="images_main">
-        <p><i id="card" class="fa-regular fa-image"></i></p>
+    <section class="images_main"> 
+        <img src="/img/mapBackground.webp" alt="" id="card" class="fa-regular fa-image">
+        <img src="/img/Image1.webp" alt="" id="card" class="fa-regular fa-image">
+        <img src="/img/Image2.webp" alt="" id="card" class="fa-regular fa-image">
+        <img src="/img/Image3.webp" alt="" id="card" class="fa-regular fa-image">
+        <img src="/img/Image4.webp" alt="" id="card" class="fa-regular fa-image">
+        <img src="/img/Image5.webp" alt="" id="card" class="fa-regular fa-image">
+
+
+
+        <p><i  id="card" class="fa-regular fa-image"></i></p>
         <p><i id="card" class="fa-regular fa-image"></i></p>
         <p><i id="card" class="fa-regular fa-image"></i></p>
         <p><i id="card" class="fa-regular fa-image"></i></p>
